Feature/178 api pagenation (#199)
* feat: implement pagination for diaries and tasks retrieval

* feat: add pagination support for tasks and diaries retrieval

* refactor: remove unused GET endpoint for diary list retrieval
