# backend/src/main/java/com/team8/taaks/controller/DiariesController.java
@@ -1,6 +1,8 @@
 package com.team8.taaks.controller;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -13,24 +15,28 @@ import com.team8.taaks.model.DiarySummary;
 import com.team8.taaks.model.TaakUser;
 
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.PathVariable;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import org.springframework.web.bind.annotation.GetMapping;
+
 
 @RestController
 public class DiariesController implements DiariesApi {
     @Autowired
     private DiaryRepository diaryRepository;
 
-    @Override
-    public ResponseEntity<List<DiarySummary>> diariesGet() {
+    @GetMapping("/diaries")
+    public ResponseEntity<Page<DiaryResponse>> diariesGet(@RequestParam (value = "page", required = false, defaultValue = "0") Integer page,
+                                                  @RequestParam(value = "size", required = false, defaultValue =  "10") Integer size) {
         TaakUser user = getAuthenticatedUser();
-        List<DiarySummary> summaries = diaryRepository.findAllByUserId(user.getId()).stream()
-                .map(diary -> new DiarySummary(diary.getId(), diary.getTitle()))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(summaries);
+        Pageable pageable = Pageable.ofSize(size).withPage(page);
+        Page<Diary> diaries = diaryRepository.findAllByUserId(user.getId(), pageable);
+        Page<DiaryResponse> diaryResponses = diaries.map(diary -> new DiaryResponse(diary.getTitle(), diary.getBody(), diary.getDate(), diary.getId()));
+        return ResponseEntity.ok(diaryResponses);
     }
 
     @Override
