# backend/src/main/java/com/team8/taaks/model/DiaryRepository.java
@@ -1,5 +1,7 @@
 package com.team8.taaks.model;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Repository;
 
@@ -11,4 +13,5 @@ public interface DiaryRepository extends JpaRepository<Diary, Integer> {
     // userIdで日記を取得
     Optional<Diary> findByIdAndUserId(Integer id, Long userId);
     List<Diary> findAllByUserId(Long userId);
+    Page<Diary> findAllByUserId(Long userId, Pageable pageable);
 }
