# openapi/openapi.yaml
@@ -167,6 +167,21 @@ paths:
       tags:
       - task-controller
       operationId: getTask
+      parameters:
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 10
       responses:
         default:
           description: exception
@@ -179,9 +194,7 @@ paths:
           content:
             '*/*':
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/TaskResponse"
+                $ref: "#/components/schemas/PageTaskResponse"
     post:
       tags:
       - task-controller
@@ -233,9 +246,22 @@ paths:
     get:
       tags:
       - diaries
-      summary: 日記一覧取得
-      description: ユーザーに紐づく日記の一覧を返す
       operationId: diariesGet
+      parameters:
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 10
       responses:
         default:
           description: exception
@@ -244,15 +270,11 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
         "200":
-          description: 一覧取得成功
+          description: OK
           content:
-            application/json:
+            '*/*':
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/DiarySummary"
-      security:
-      - bearerAuth: []
+                $ref: "#/components/schemas/PageDiaryResponse"
     post:
       tags:
       - diaries
@@ -407,16 +429,94 @@ components:
         id:
           type: integer
           format: int64
-    DiarySummary:
+    PageTaskResponse:
       type: object
       properties:
-        id:
+        totalElements:
+          type: integer
+          format: int64
+        totalPages:
           type: integer
           format: int32
-          example: 1
-        title:
-          type: string
-          example: お出かけ
-      required:
-      - id
-      - title
+        pageable:
+          $ref: "#/components/schemas/PageableObject"
+        size:
+          type: integer
+          format: int32
+        content:
+          type: array
+          items:
+            $ref: "#/components/schemas/TaskResponse"
+        number:
+          type: integer
+          format: int32
+        sort:
+          $ref: "#/components/schemas/SortObject"
+        numberOfElements:
+          type: integer
+          format: int32
+        first:
+          type: boolean
+        last:
+          type: boolean
+        empty:
+          type: boolean
+    PageableObject:
+      type: object
+      properties:
+        paged:
+          type: boolean
+        pageNumber:
+          type: integer
+          format: int32
+        pageSize:
+          type: integer
+          format: int32
+        unpaged:
+          type: boolean
+        offset:
+          type: integer
+          format: int64
+        sort:
+          $ref: "#/components/schemas/SortObject"
+    SortObject:
+      type: object
+      properties:
+        sorted:
+          type: boolean
+        unsorted:
+          type: boolean
+        empty:
+          type: boolean
+    PageDiaryResponse:
+      type: object
+      properties:
+        totalElements:
+          type: integer
+          format: int64
+        totalPages:
+          type: integer
+          format: int32
+        pageable:
+          $ref: "#/components/schemas/PageableObject"
+        size:
+          type: integer
+          format: int32
+        content:
+          type: array
+          items:
+            $ref: "#/components/schemas/DiaryResponse"
+        number:
+          type: integer
+          format: int32
+        sort:
+          $ref: "#/components/schemas/SortObject"
+        numberOfElements:
+          type: integer
+          format: int32
+        first:
+          type: boolean
+        last:
+          type: boolean
+        empty:
+          type: boolean
